[gd_scene load_steps=21 format=3 uid="uid://2xkb4jkoy7fj"]

[ext_resource type="Script" uid="uid://b5e2bfa6yih7x" path="res://scripts/sliding.gd" id="1_jg6g1"]
[ext_resource type="Texture2D" uid="uid://dd0kktuwfpgdc" path="res://assets/sprites/FloorTileBackground.png" id="2_4yhq1"]
[ext_resource type="Texture2D" uid="uid://demiyyu05t57s" path="res://assets/sprites/WoodTiles/Tile1.png" id="3_wwop3"]
[ext_resource type="Texture2D" uid="uid://cad638x1grr2n" path="res://assets/sprites/WoodTiles/Tile2.png" id="4_58lxc"]
[ext_resource type="Texture2D" uid="uid://borli5dibq8xl" path="res://assets/sprites/WoodTiles/Tile3.png" id="5_cu0fl"]
[ext_resource type="Texture2D" uid="uid://cuudbbdb7juhh" path="res://assets/sprites/WoodTiles/Tile4.png" id="6_4xb00"]
[ext_resource type="Texture2D" uid="uid://csa1opqv4yrvy" path="res://assets/sprites/WoodTiles/Tile5.png" id="7_vag78"]
[ext_resource type="Texture2D" uid="uid://bn0fj03sjayvc" path="res://assets/sprites/WoodTiles/Tile6.png" id="8_nm4j4"]
[ext_resource type="Texture2D" uid="uid://do77p4yiv1arg" path="res://assets/sprites/WoodTiles/Tile7.png" id="9_5a2wi"]
[ext_resource type="Texture2D" uid="uid://co2yd3eki0rxl" path="res://assets/sprites/WoodTiles/Tile8.png" id="10_b63kh"]
[ext_resource type="Texture2D" uid="uid://cslbvortehhvx" path="res://assets/sprites/WoodTiles/Tile9.png" id="11_qg6ce"]
[ext_resource type="Texture2D" uid="uid://yyxqny1enaap" path="res://assets/sprites/WoodTiles/Tile10.png" id="12_o3dsa"]
[ext_resource type="Texture2D" uid="uid://bkb072qdwna25" path="res://assets/sprites/WoodTiles/Tile11.png" id="13_etqc8"]
[ext_resource type="Texture2D" uid="uid://dw033v7bau7l8" path="res://assets/sprites/WoodTiles/Tile12.png" id="14_x2d5d"]
[ext_resource type="Texture2D" uid="uid://cav7wg076lx0b" path="res://assets/sprites/WoodTiles/Tile13.png" id="15_lcdyx"]
[ext_resource type="Texture2D" uid="uid://b7peeesufp5xf" path="res://assets/sprites/WoodTiles/Tile14.png" id="16_qj44n"]
[ext_resource type="Texture2D" uid="uid://bsvunfa0wn476" path="res://assets/sprites/WoodTiles/Tile15.png" id="17_jp8kx"]
[ext_resource type="Texture2D" uid="uid://b3yxh6d1x83g2" path="res://assets/sprites/WoodTiles/Tile16.png" id="18_l02ut"]
[ext_resource type="Texture2D" uid="uid://cjqd1q2py11v1" path="res://assets/sprites/ExitButton.png" id="19_gg4kn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umfk4"]
size = Vector2(500, 500)

[node name="Sliding" type="Area2D"]
script = ExtResource("1_jg6g1")
metadata/_edit_vertical_guides_ = [0.0, -326.0]
metadata/_edit_horizontal_guides_ = [-74.0]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(250, 250)

[node name="FloorTileBackground" type="Sprite2D" parent="."]
position = Vector2(250, 250)
scale = Vector2(7.2, 7.2)
texture = ExtResource("2_4yhq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(250, 250)
shape = SubResource("RectangleShape2D_umfk4")

[node name="tile1" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-187, -187)
scale = Vector2(2, 2)
texture = ExtResource("3_wwop3")

[node name="tile2" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-62, -187)
scale = Vector2(2, 2)
texture = ExtResource("4_58lxc")

[node name="tile3" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(63, -187)
scale = Vector2(2, 2)
texture = ExtResource("5_cu0fl")

[node name="tile4" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(188, -187)
scale = Vector2(2, 2)
texture = ExtResource("6_4xb00")

[node name="tile5" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-187, -62)
scale = Vector2(2, 2)
texture = ExtResource("7_vag78")

[node name="tile6" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-62, -62)
scale = Vector2(2, 2)
texture = ExtResource("8_nm4j4")

[node name="tile7" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(62, -62)
scale = Vector2(2, 2)
texture = ExtResource("9_5a2wi")

[node name="tile8" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(187, -62)
scale = Vector2(2, 2)
texture = ExtResource("10_b63kh")

[node name="tile9" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-187, 62)
scale = Vector2(2, 2)
texture = ExtResource("11_qg6ce")

[node name="tile10" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-62, 62)
scale = Vector2(2, 2)
texture = ExtResource("12_o3dsa")

[node name="tile11" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(62, 62)
scale = Vector2(2, 2)
texture = ExtResource("13_etqc8")

[node name="tile12" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(187, 62)
scale = Vector2(2, 2)
texture = ExtResource("14_x2d5d")

[node name="tile13" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-187, 187)
scale = Vector2(2, 2)
texture = ExtResource("15_lcdyx")

[node name="tile14" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-62, 187)
scale = Vector2(2, 2)
texture = ExtResource("16_qj44n")

[node name="tile15" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(62, 187)
scale = Vector2(2, 2)
texture = ExtResource("17_jp8kx")

[node name="tile16" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(187, 187)
scale = Vector2(2, 2)
texture = ExtResource("18_l02ut")

[node name="Exit" type="TextureButton" parent="."]
visible = false
offset_left = 561.0
offset_top = -4.0
offset_right = 761.0
offset_bottom = 71.0
size_flags_vertical = 3
texture_normal = ExtResource("19_gg4kn")
stretch_mode = 4

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
